<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

    >

    <item
        android:id="@+id/filterProperty"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fragmentMap"
        android:icon="@drawable/ic_map_black_24dp"
        android:iconTintMode="add"
        android:title="@string/menu_add_property"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/convertDollarEuro"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/convert"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/addPropertyActivity"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/menu_add_property"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/addAgentActivity"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/menu_add_agent"
        app:showAsAction="never"

        />

    <item
        android:id="@+id/loanCalculatorActivity"
        android:icon="@drawable/ic_calculator_ic"
        android:title="@string/loan"
        app:showAsAction="never" />


</menu>