<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cameraZoom="13"
            app:mapType="normal"
            app:uiZoomControls="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>