...
                app:endIconDrawable="@drawable/ic_location_on_black_24dp"
                app:endIconMode="custom"
                app:helperText="@string/location_helper"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_text_button_no_filter">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
